--- a/deb/openmediavault-nut/usr/share/openmediavault/locale/ru_RU/openmediavault-nut.po
+++ b/deb/openmediavault-nut/usr/share/openmediavault/locale/ru_RU/openmediavault-nut.po
@@ -5,14 +5,15 @@
 # Translators:
 # Alexander Savchenko, 2014
 # mictian <ffrants@gmail.com>, 2012
+# Volker <votdev@gmx.de>, 2017
 # Артур Мудрых <arturmon82@gmail.com>, 2012-2013
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2015-03-04 20:16+0000\n"
-"Last-Translator: Alexander Savchenko\n"
+"PO-Revision-Date: 2017-04-10 15:01+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -92,7 +93,7 @@ msgid ""
 "To get more information how to configure your UPS please check the Network "
 "UPS Tools <a href='http://www.networkupstools.org/docs/man/ups.conf.html' "
 "target='_blank'>documentation</a>."
-msgstr "Чтобы получить более подробную информацию, как настроить UPS проверьте Network UPS Tools <a href='http://www.networkupstools.org/docs/man/ups.conf.html' target='_blank'>documentation</ >."
+msgstr "Чтобы получить более подробную информацию, как настроить UPS проверьте <a href='http://www.networkupstools.org/docs/man/ups.conf.html' target='_blank'>документацию</a> Network UPS Tools."
 
 msgid "UPS"
 msgstr "ИБП"
