--- a/deb/openmediavault-ldap/debian/changelog
+++ b/deb/openmediavault-ldap/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-ldap (3.1.6) stable; urgency=low
+
+  * Mantis 0001715: Wrong permissions of config files with sensitive data.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 10 Apr 2017 17:12:41 +0200
+
 openmediavault-ldap (3.1.5) stable; urgency=low
 
   * Fix first installation bug.
