--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/uk_UK/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/uk_UK/openmediavault-lvm2.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-lvm2 package.
 # 
 # Translators:
 # zubr139, 2013,2016
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-05-03 12:28+0000\n"
-"Last-Translator: zubr139\n"
+"POT-Creation-Date: 2017-04-12 18:35+0200\n"
+"PO-Revision-Date: 2017-04-12 16:36+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -118,6 +118,9 @@ msgstr "Обрати пристрій ..."
 
 msgid "Size"
 msgstr "Розмір"
+
+msgid "Snapshot"
+msgstr ""
 
 msgid "Used"
 msgstr "Використано"
