--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/it_IT/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/it_IT/openmediavault-lvm2.po
@@ -5,14 +5,14 @@
 # Translators:
 # maurorulli <mauro.rulli@gmail.com>, 2012
 # maurorulli <mauro.rulli@gmail.com>, 2012
-# Paolo Velati <paolo.velati@gmail.com>, 2013-2015
+# Paolo Velati <paolo.velati@gmail.com>, 2013-2015,2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-12 18:35+0200\n"
-"PO-Revision-Date: 2017-04-12 16:36+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-04-14 09:35+0000\n"
+"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/votdev/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -122,7 +122,7 @@ msgid "Size"
 msgstr "Dimensione"
 
 msgid "Snapshot"
-msgstr ""
+msgstr "Istantanea"
 
 msgid "Used"
 msgstr "Usato"
