--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/ru_RU/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/ru_RU/openmediavault-lvm2.po
@@ -7,13 +7,14 @@
 # Ichi <ichiperm@gmail.com>, 2012
 # mictian <ffrants@gmail.com>, 2012
 # Артур Мудрых <arturmon82@gmail.com>, 2012,2015
+# Артур Мудрых <arturmon82@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-12 18:35+0200\n"
-"PO-Revision-Date: 2017-04-12 16:36+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-04-18 11:43+0000\n"
+"Last-Translator: Артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -123,7 +124,7 @@ msgid "Size"
 msgstr "Размер"
 
 msgid "Snapshot"
-msgstr ""
+msgstr "Снимок"
 
 msgid "Used"
 msgstr "Использованно"
