--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/tr_TR/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/tr_TR/openmediavault-lvm2.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the openmediavault-lvm2 package.
 # 
 # Translators:
-# Serhat SUT <serhat.sut@gmail.com>, 2012-2015
+# Serhat SUT <serhat.sut@gmail.com>, 2012-2015,2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-12 18:35+0200\n"
-"PO-Revision-Date: 2017-04-12 16:36+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-04-16 16:32+0000\n"
+"Last-Translator: Serhat SUT <serhat.sut@gmail.com>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/votdev/openmediavault/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -120,7 +120,7 @@ msgid "Size"
 msgstr "Büyüklük"
 
 msgid "Snapshot"
-msgstr ""
+msgstr "Anlık Durum Görüntüsü"
 
 msgid "Used"
 msgstr "Kullanılan"
