--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/zh_TW/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/zh_TW/openmediavault-lvm2.po
@@ -3,15 +3,15 @@
 # This file is distributed under the same license as the openmediavault-lvm2 package.
 # 
 # Translators:
-# kochin <kochinc@outlook.com>, 2013-2015
+# kochin <kochinc@outlook.com>, 2013-2015,2017
 # kochin <kochinc@outlook.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-12 18:35+0200\n"
-"PO-Revision-Date: 2017-04-12 16:36+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-04-13 01:10+0000\n"
+"Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/votdev/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -121,7 +121,7 @@ msgid "Size"
 msgstr "大小"
 
 msgid "Snapshot"
-msgstr ""
+msgstr "快照"
 
 msgid "Used"
 msgstr "已使用"
