--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-netatalk (3.2.9) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 20 Apr 2017 21:34:10 +0200
+
 openmediavault-netatalk (3.2.8) stable; urgency=low
 
   * Various improvements.
