--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (3.0.71) stable; urgency=low
+
+  * Update locales.
+  * Various bug fixes and improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 20 Apr 2017 21:35:11 +0200
+
 openmediavault (3.0.70) stable; urgency=low
 
   * Fix bug in omv-firstaid command 'Clear local upload package repository'.
