--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.72) stable; urgency=low
+
+  * Various bug fixes and improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 20 Apr 2017 23:13:33 +0200
+
 openmediavault (3.0.71) stable; urgency=low
 
   * Update locales.
