--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.73) stable; urgency=low
+
+  * Enable mounting of filesystems without an UUID.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 24 Apr 2017 23:10:04 +0200
+
 openmediavault (3.0.72) stable; urgency=low
 
   * Various bug fixes and improvements.
