--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-usbbackup (3.2.18) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 26 Apr 2017 18:47:01 +0200
+
 openmediavault-usbbackup (3.2.17) stable; urgency=low
 
   * Fix bug caused by erroneous API usage.
