--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,8 @@
 openmediavault (3.0.73) stable; urgency=low
 
   * Enable mounting of filesystems without an UUID.
+  * Mantis 0001729: Unable to stop rsync job once it has begun.
+    This issue relates to all jobs that are started via WebUI.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 24 Apr 2017 23:10:04 +0200
 
