--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,6 @@
 openmediavault (3.0.74) stable; urgency=low
 
-  * Various API improvements.
+  * Various API and UI improvements.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 30 Apr 2017 17:34:07 +0200
 
