--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.75) stable; urgency=low
+
+  * Fix bug reading /var/lib/openmediavault/dirtymodules.json.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 05 May 2017 00:35:22 +0200
+
 openmediavault (3.0.74) stable; urgency=low
 
   * Various API and UI improvements.
