--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.2.15) stable; urgency=low
+
+  * Fix bug reading /var/lib/openmediavault/dirtymodules.json.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 05 May 2017 00:44:21 +0200
+
 openmediavault (2.2.14) stable; urgency=low
 
   * Backport Chrome browser workaround to fix WebUI render issues.
