--- a/deb/libjs-extjs6/debian/changelog
+++ b/deb/libjs-extjs6/debian/changelog
@@ -1,3 +1,9 @@
+libjs-extjs6 (6.2.0.981-2) stable; urgency=low
+
+  * Fix bug in debian/libjs6.postinst script.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 11 May 2017 23:33:55 +0200
+
 libjs-extjs6 (6.2.0.981-1) stable; urgency=low
 
   * Initial release.
