--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.75.1) stable; urgency=low
+
+  * Fix bug in debian/openmediavault.postinst script.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 11 May 2017 23:55:17 +0200
+
 openmediavault (3.0.75) stable; urgency=low
 
   * Upgrade WebUI to Sencha ExtJS6.
