--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.76) stable; urgency=low
+
+  * Various API and UI improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 12 May 2017 00:36:54 +0200
+
 openmediavault (3.0.75.1) stable; urgency=low
 
   * Fix bug in debian/openmediavault.postinst script.
