--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-usbbackup (3.2.19) stable; urgency=low
+
+  * Update locales.
+  * Fix bug "usesubdir: The value '1' is not a boolean".
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 13 May 2017 12:42:36 +0200
+
 openmediavault-usbbackup (3.2.18) stable; urgency=low
 
   * Various improvements.
