--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -4,6 +4,7 @@ openmediavault (3.0.76) stable; urgency=low
   * Add support to configure the WebUI theme via environment variable. Add
     OMV_WEBUI_THEME=(triton|gray) to /etc/default/openmediavault to switch
     the default theme.
+  * Mantis 0001736: Error when unmounting filesystem (legacy mount point).
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 12 May 2017 00:36:54 +0200
 
