--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.77) stable; urgency=low
+
+  * Mantis 0001683: Change btrfs-tools dependency to btrfs-tools | btrfs-progs.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 16 May 2017 13:20:28 +0200
+
 openmediavault (3.0.76) stable; urgency=low
 
   * Various API and UI improvements.
