--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (3.0.77) stable; urgency=low
 
+  * Improve rsync jobs. Check if the source mount point exists.
   * Mantis 0001683: Change btrfs-tools dependency to btrfs-tools | btrfs-progs.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 16 May 2017 13:20:28 +0200
