--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,8 @@ openmediavault (3.0.77) stable; urgency=low
 
   * Improve rsync jobs. Check if the source mount point exists.
   * Mantis 0001683: Change btrfs-tools dependency to btrfs-tools | btrfs-progs.
+  * Mantis 0001742: Focused line twitches when "File systems" page is
+    dynamically refreshing.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 16 May 2017 13:20:28 +0200
 
