--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-clamav (3.3.2) stable; urgency=low
+
+  * Relocate PID files.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 24 May 2017 16:04:03 +0200
+
 openmediavault-clamav (3.3.1) stable; urgency=low
 
   * Fix bug in database creation script.
