--- a/deb/openmediavault/usr/share/openmediavault/locale/pt_PT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/pt_PT/openmediavault.po
@@ -3,15 +3,15 @@
 # This file is distributed under the same license as the openmediavault package.
 # 
 # Translators:
-# Nelson Rosado <nelsontrosado@gmail.com>, 2012-2015
+# Nelson Rosado <nelsontrosado@gmail.com>, 2012-2015,2017
 # Nelson Rosado <nelsontrosado@gmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-03 21:34+0200\n"
-"PO-Revision-Date: 2017-05-03 19:36+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-05-27 18:23+0000\n"
+"Last-Translator: Nelson Rosado <nelsontrosado@gmail.com>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/votdev/openmediavault/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,7 +27,7 @@ msgid "%s (%s available)"
 msgstr "%s (%s disponível)"
 
 msgid "%s [%s (%d%%) used, %s available]"
-msgstr ""
+msgstr "%s [%s (%d%%) utilizados, %s disponível]"
 
 msgid "%s [on %s, %s]"
 msgstr "%s [em %s, %s]"
@@ -127,7 +127,7 @@ msgid "300 minutes"
 msgstr "300 minutos"
 
 msgid "330 minutes"
-msgstr ""
+msgstr "330 minutos"
 
 msgid "4 days"
 msgstr "4 dias"
@@ -169,7 +169,7 @@ msgid "About"
 msgstr "Sobre"
 
 msgid "Absolute Path"
-msgstr ""
+msgstr "Caminho absoluto"
 
 msgid "Abstract"
 msgstr "Abstrato"
@@ -700,7 +700,7 @@ msgid "Cook Islands"
 msgstr "Cook Islands"
 
 msgid "Copy to clipboard"
-msgstr ""
+msgstr "Copiar para memória"
 
 msgid "Costa Rica"
 msgstr "Costa Rica"
@@ -832,10 +832,10 @@ msgid "Device Symlinks"
 msgstr ""
 
 msgid "Device has a few bad sectors"
-msgstr ""
+msgstr "Dispositivo tem alguns sectores danificados"
 
 msgid "Device has many bad sectors"
-msgstr ""
+msgstr "Dispositivo tem demasiados sectores danificados"
 
 msgid "Device information"
 msgstr "Informação de dispositivo"
@@ -853,7 +853,7 @@ msgid "Device was used outside of design parameters in the past"
 msgstr ""
 
 msgid "Device(s)"
-msgstr ""
+msgstr "Dispositivo(s)"
 
 msgid "Device/Label"
 msgstr "Dispositivo/Nome"
@@ -1048,7 +1048,7 @@ msgid "Edit scheduled test"
 msgstr "Editar teste agendado"
 
 msgid "Edit service"
-msgstr ""
+msgstr "Editar serviço"
 
 msgid "Edit share"
 msgstr "Editar partilha"
@@ -1179,7 +1179,7 @@ msgid "Error #"
 msgstr "Erro #"
 
 msgid "Errors"
-msgstr ""
+msgstr "Erros"
 
 msgid "Estonia"
 msgstr "Estónia"
@@ -1242,7 +1242,7 @@ msgid "FTP - Transfer log"
 msgstr "FTP - Log de transferência"
 
 msgid "FTP-Proxy"
-msgstr ""
+msgstr "FTP-Proxy"
 
 msgid "FXP"
 msgstr "FXP"
@@ -1299,7 +1299,7 @@ msgid "Filesize"
 msgstr "Tamanho de ficheiro"
 
 msgid "Filesystem Type"
-msgstr ""
+msgstr "Tipo de Sistema de Ficheiros"
 
 msgid "Filesystems"
 msgstr "Sistema de ficheiros"
@@ -1344,7 +1344,7 @@ msgid "Full"
 msgstr "Cheio"
 
 msgid "GID"
-msgstr ""
+msgstr "GID"
 
 msgid "Gabon"
 msgstr "Gabão"
@@ -1383,7 +1383,7 @@ msgid "Gibraltar"
 msgstr "Gibraltar"
 
 msgid "Good"
-msgstr ""
+msgstr "Bom"
 
 msgid "Greece"
 msgstr "Grécia"
@@ -1434,10 +1434,10 @@ msgid "Guyana"
 msgstr "Guyana"
 
 msgid "HTTP-Proxy"
-msgstr ""
+msgstr "HTTP-Proxy"
 
 msgid "HTTPS-Proxy"
-msgstr ""
+msgstr "HTTPS-Proxy"
 
 msgid "Haiti"
 msgstr "Haiti"
@@ -1512,7 +1512,7 @@ msgid "Identify"
 msgstr "Identificar"
 
 msgid "Identify As"
-msgstr ""
+msgstr "Identificado como"
 
 msgid "Identify network interface device"
 msgstr "Identificar dispositivo de interface de rede"
@@ -2047,7 +2047,7 @@ msgid "Mount"
 msgstr "Montar"
 
 msgid "Mount Point"
-msgstr ""
+msgstr "Ponto de montagem"
 
 msgid "Mounted"
 msgstr "Montado"
@@ -2086,7 +2086,7 @@ msgid "Network"
 msgstr "Rede"
 
 msgid "Network Interfaces"
-msgstr ""
+msgstr "Interface de rede"
 
 msgid "Network interfaces"
 msgstr "Dispositivo de rede"
@@ -2257,7 +2257,7 @@ msgid "Package information"
 msgstr "Informação do pacote"
 
 msgid "Page not found"
-msgstr ""
+msgstr "Página não encontrada"
 
 msgid "Pakistan"
 msgstr "Paquistão"
@@ -2399,7 +2399,7 @@ msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Por favor escolha o método para limpar o aparelho ou Cancel para abortar."
 
 msgid "Please first select a device."
-msgstr ""
+msgstr "Tem de escolher um dispositivo."
 
 msgid ""
 "Please note that no communication with the system is possible during this "
@@ -2503,7 +2503,7 @@ msgid "Protocol"
 msgstr "Protocolo"
 
 msgid "Proxy"
-msgstr ""
+msgstr "Proxy"
 
 msgid "Public"
 msgstr "Publico"
@@ -2764,7 +2764,7 @@ msgid "SSH certificate"
 msgstr ""
 
 msgid "SSH port"
-msgstr ""
+msgstr "SSH port"
 
 msgid "SSID"
 msgstr "SSID"
