Introduce OMV.grid.column.Enabled grid column UI control.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,18 +1,16 @@
 openmediavault (3.0.78) stable; urgency=low
 
-  *
+  * Introduce OMV.grid.column.OnOffSwitch UI control.
 
- -- Volker Theile <volker.theile@openmediavault.org>  Sun, 28 May 2017 21:34:27 +0200
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 30 May 2017 20:56:26 +0200
 
 openmediavault (3.0.77) stable; urgency=low
 
-  * Update locales.
-  * Improve postfix configuration. This should prevent bounced emails.
+  * Improve postfix configuration.
   * Improve rsync jobs. Check if the source mount point exists.
   * Mantis 0001683: Change btrfs-tools dependency to btrfs-tools | btrfs-progs.
   * Mantis 0001742: Focused line twitches when "File systems" page is
     dynamically refreshing.
-  * Fix navigation display issue on touch devices.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 16 May 2017 13:20:28 +0200
 
