--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-clamav (3.3.3) stable; urgency=low
+
+  * Various UI improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 30 May 2017 20:57:51 +0200
+
 openmediavault-clamav (3.3.2) stable; urgency=low
 
   * Relocate PID files.
