--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (3.0.78) stable; urgency=low
 
   * Introduce OMV.grid.column.Enabled UI control.
+  * Mantis 0001755: Outdated configuration of rsyslog.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 30 May 2017 20:56:26 +0200
 
