Forward exit code.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.79) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 06 Jun 2017 23:28:11 +0200
+
 openmediavault (3.0.78) stable; urgency=low
 
   * Introduce OMV.grid.column.Enabled UI control.
