--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,8 @@
 openmediavault (3.0.79) stable; urgency=low
 
   * Various improvements.
+  * Mantis 0001754: Add SAN (Subject Alternative Name) to self-signed SSL
+    certificates.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 06 Jun 2017 23:28:11 +0200
 
