Improve PHP class \OMV\System\SystemCtl.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (3.0.80) stable; urgency=low
 
   * Fix bug in shutdown page.
+  * Improve PHP class \OMV\System\SystemCtl.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 12 Jun 2017 14:20:48 +0200
 
