--- a/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
@@ -11,13 +11,14 @@
 # mictian <ffrants@gmail.com>, 2012
 # azlk azlk <phg.azlk@gmail.com>, 2012
 # Артур Мудрых <arturmon82@gmail.com>, 2012-2013,2015-2016
+# Артур Мудрых <arturmon82@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-03 21:34+0200\n"
-"PO-Revision-Date: 2017-05-03 19:36+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-06-07 14:59+0000\n"
+"Last-Translator: Артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1054,7 +1055,7 @@ msgid "Edit scheduled test"
 msgstr "Редактировать запланированный тест"
 
 msgid "Edit service"
-msgstr ""
+msgstr "Редактировать сервис"
 
 msgid "Edit share"
 msgstr "Редактировать общий ресурс"
@@ -1185,7 +1186,7 @@ msgid "Error #"
 msgstr "Ошибка #"
 
 msgid "Errors"
-msgstr ""
+msgstr "Ошибки"
 
 msgid "Estonia"
 msgstr "Эстония"
@@ -3996,7 +3997,7 @@ msgid "Yes"
 msgstr "Да"
 
 msgid "You need to commit or cancel your changes"
-msgstr ""
+msgstr "Вам необходимо зафиксировать или отменить свои изменения"
 
 msgid "Zambia"
 msgstr "Замбия"
