--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-03 21:34+0200\n"
-"PO-Revision-Date: 2017-05-04 10:20+0000\n"
+"PO-Revision-Date: 2017-06-26 05:51+0000\n"
 "Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/votdev/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
@@ -2668,10 +2668,10 @@ msgid "Required"
 msgstr "Requerido"
 
 msgid "Reset"
-msgstr "Reiniciar"
+msgstr "Restaurar estado"
 
 msgid "Reset UI to defaults"
-msgstr "Reinicia WebGUI por defecto"
+msgstr "Volver a valores por defecto de la WebGUI"
 
 msgid ""
 "Reset the UI settings to their default values, e.g. the order of the grid "
