--- a/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
@@ -8,14 +8,14 @@
 # maurorulli <mauro.rulli@gmail.com>, 2012
 # maurorulli <mauro.rulli@gmail.com>, 2012
 # Mario Varelli <mvarelli@biologia.unipi.it>, 2012
-# Paolo Velati <paolo.velati@gmail.com>, 2013-2016
+# Paolo Velati <paolo.velati@gmail.com>, 2013-2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-03 21:34+0200\n"
-"PO-Revision-Date: 2017-05-03 19:36+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-06-17 17:42+0000\n"
+"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/votdev/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1052,7 +1052,7 @@ msgid "Edit scheduled test"
 msgstr "Modifica test pianificato"
 
 msgid "Edit service"
-msgstr ""
+msgstr "Modifica servizio"
 
 msgid "Edit share"
 msgstr "Modifica condivisione"
@@ -1183,7 +1183,7 @@ msgid "Error #"
 msgstr "Errore #"
 
 msgid "Errors"
-msgstr ""
+msgstr "Errori"
 
 msgid "Estonia"
 msgstr "Estonia"
@@ -3994,7 +3994,7 @@ msgid "Yes"
 msgstr "Sì"
 
 msgid "You need to commit or cancel your changes"
-msgstr ""
+msgstr "È necessario confermare o annullare le modifiche"
 
 msgid "Zambia"
 msgstr "Zambia"
