--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.82) stable; urgency=low
+
+  *
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 26 Jun 2017 22:44:51 +0200
+
 openmediavault (3.0.81) stable; urgency=low
 
   * Update locales.
