--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,6 @@
 openmediavault (3.0.82) stable; urgency=low
 
-  *
+  * Various improvements.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 26 Jun 2017 22:44:51 +0200
 
